# ra-cli

./: .gitignore  LICENSE  README.md  RELEASE.md  SPEC.md  install.sh
.github/workflows/: ci.yml  npm-publish.yml  publish.yml  release.yml
ra/: Cargo.toml  README.md
ra/npm-package/: README.md  package.json
ra/npm-package/scripts/: postinstall.js
ra/src/: agent.rs  cli.rs  constants.rs  lib.rs  logger.rs  main.rs  prompt.rs  protocol.rs  run.rs  tools.rs
scripts/: release_prep.sh
